// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that failed checks 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--grey">Checks failed</strong>",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/lookup",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/type",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "text": "Other accommodation type",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/status",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Failed",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that has not been checked 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--orange">Not checked</strong>",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/lookup",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/type",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "text": "Other accommodation type",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/status",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Not checked",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that is confirmed 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--green">Confirmed</strong>",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/lookup",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/type",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "text": "Other accommodation type",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/status",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Passed",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/nextAccommodation",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Next address",
    },
    "value": {
      "text": "Yes",
    },
  },
]
`;

exports[`Proposed addresses utilities addressDetailRows returns the correct rows for an address that passed checks 1`] = `
[
  {
    "key": {
      "text": "Status",
    },
    "value": {
      "html": "<strong class="govuk-tag govuk-tag--yellow">Checks passed</strong>",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/lookup",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address",
    },
    "value": {
      "html": "1 Street<br />Town<br />P0 5TC",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/type",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Housing arrangement",
    },
    "value": {
      "text": "Other accommodation type",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/status",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Address checks",
    },
    "value": {
      "text": "Passed",
    },
  },
  {
    "actions": {
      "items": [
        {
          "href": "/cases/X651925/proposed-addresses/address-id/edit/nextAccommodation",
          "text": "Change",
        },
      ],
    },
    "key": {
      "text": "Next address",
    },
    "value": {
      "text": "Still to be decided",
    },
  },
]
`;

exports[`Proposed addresses utilities addressTimelineEntry returns a timeline entry for a note 1`] = `
{
  "byline": {
    "text": "Candace Schumm",
  },
  "datetime": {
    "timestamp": "2025-07-18T17:53:24.426Z",
    "type": "datetime",
  },
  "html": "<p>Some note</p><p>line 2</p>",
  "label": {
    "text": "Note added",
  },
}
`;

exports[`Proposed addresses utilities addressTimelineEntry returns a timeline entry for an address created record 1`] = `
{
  "byline": {
    "text": "Dr. Kay Towne",
  },
  "datetime": {
    "timestamp": "2026-03-06T21:37:21.666Z",
    "type": "datetime",
  },
  "html": "

  
    <p><strong class="govuk-tag govuk-tag--green">Confirmed</strong></p>
  

  
    
      <p class="govuk-!-margin-bottom-1">Address: 1 Street, Town, P0 5TC</p>
    
  
    
      <p class="govuk-!-margin-bottom-1">Housing arrangement: Other accommodation type</p>
    
  
    
      <p class="govuk-!-margin-bottom-1">Address checks: Passed</p>
    
  
    
      <p class="govuk-!-margin-bottom-1">Next address: Yes</p>
    
  ",
  "label": {
    "text": "Address created",
  },
}
`;

exports[`Proposed addresses utilities addressTimelineEntry returns a timeline entry for an address updated record 1`] = `
{
  "byline": {
    "text": "Florence Collins",
  },
  "datetime": {
    "timestamp": "2025-06-15T07:15:13.764Z",
    "type": "datetime",
  },
  "html": "

  
    <p><strong class="govuk-tag govuk-tag--yellow">Checks passed</strong></p>
  

  
    
  
    
  
    
      <p class="govuk-!-margin-bottom-1">Address checks changed to Passed</p>
    
  
    
  ",
  "label": {
    "text": "Address updated",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks failed" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "5 January 2026 (16 days ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": true,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "grey",
    "text": "Checks failed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is NO 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit/nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is TO_BE_DECIDED 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit/nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "checks passed" proposed address status card object if the nextAccommodationStatus is undefined 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit/nextAccommodation",
      "text": "Confirm as next address",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Checks passed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "confirmed" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Confirmed",
  },
}
`;

exports[`Proposed addresses utilities proposedAddressStatusCard returns a "not checked yet" proposed address status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Housing arrangement",
      },
      "value": {
        "text": "Other accommodation type",
      },
    },
    {
      "key": {
        "text": "Added by",
      },
      "value": {
        "text": "",
      },
    },
    {
      "key": {
        "text": "Date added",
      },
      "value": {
        "text": "20 January 2026 (1 day ago)",
      },
    },
  ],
  "heading": "345 Foo Drive, Winklechester, ZZ1 1ZZ",
  "inactive": false,
  "links": [
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/edit/status",
      "text": "Add checks",
    },
    {
      "href": "/cases/CRN123/proposed-addresses/some-id/details",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not checked",
  },
}
`;

exports[`Proposed addresses utilities summaryListRows formats status when checks failed with reason 1`] = `"<p>Failed</p><p>Not suitable</p>"`;
